tests/invalid/struct/linear_struct_partial_field_move.facet
struct Pair {
  x: linear isize,
  y: linear isize
}

fn main() -> unrestricted () {
  let p: linear Pair = Pair { x = 1, y = 2 };
  (drop p.x);
  ()
}
